# Multiprocess-Snake-Game

./: .gitignore  CMakeLists.txt  README.md
include/: CaptureVideo.hpp  ImageProcessing.hpp  Log.hpp  Snake.hpp  constants.hpp  shared_memory.hpp  synchronizer.hpp
src/: CaptureVideo.cpp  ImageProcessing.cpp  Log.cpp  Snake.cpp  capture.cpp  game.cpp  info.cpp  main.cpp  process.cpp  shared_memory.cpp  start.cpp  synchronizer.cpp
